# mysqldumpsplitter-cmake

./: .gitignore  CMakeLists.txt  README.md
scripts/: build_vs2022_win64.bat
src/: main.cpp
